--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <h1> anuska </h1>
+    <h1>Hii its anuska</h1>
     <button class="button">
         <div class="bg"></div>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 342 208" height="208" width="342"
